= MsgCheck ChangeLog
:author: Sébastien Helleu
:email: flashcode@flashtux.org
:lang: en


== Version 2.8 (under dev!)

* sort and keep unique misspelled words with option -m/--only-misspelled

== Version 2.7 (2014-06-28)

* add argument id/str for -s/--spelling to check messages or translations
* ensure pwl is not None before checking if file exists
* exit immediately if pwl file does not exist
* add pylint checks for Travis CI

== Version 2.6 (2014-05-03)

* add tests with Travis CI
* code refactoring, add setup.py and tests
* fix return code when there are more than 255 files with errors

== Version 2.5 (2014-04-26)

* code cleanup

== Version 2.4 (2014-03-18)

* add option "-W" (or "--no-whitespace-eol") to not check trailing whitespace
  at end of lines inside strings

== Version 2.3 (2014-01-20)

* fix error with --spelling

== Version 2.2 (2013-11-08)

* add a main function

== Version 2.1 (2013-11-02)

* fix problem when latest string in file has a plural form (this last
  translation was ignored)
* use codecs module to unescape strings (faster with python 3)
* display full exception in case of problem when reading file
* add short option synonym "-P" for "--pwl"
* add short option synonym "-e" for "--extract"
* rename some long names for command line options
* major code cleanup: add comments, move checking/error functions from
  class PoMessage to class PoFile
* full PEP8 compliance

== Version 2.0 (2013-09-23)

* display number of files OK when there are multiple files checked and no
  errors

== Version 1.9 (2013-09-21)

* add short option "-m" for "--onlymisspelled"

== Version 1.8 (2013-09-21)

* add option "-d" (or "--dicts") to use extra dictionaries for spell checking

== Version 1.7 (2013-09-21)

* add option "--onlymisspelled" to display only misspelled words instead of
  errors with translations

== Version 1.6 (2013-09-15)

* add option "--extract" to extract translations

== Version 1.5 (2013-09-15)
