@@ -6,6 +6,7 @@
 
 == Version 2.8 (under dev!)
 
+* display multiple misspelled words on same error line
 * sort and keep unique misspelled words with option -m/--only-misspelled
 
 == Version 2.7 (2014-06-28)
